refactor<CMakeLists, package-lock>: 简化包管理并添加包锁定支持

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,36 +18,11 @@ endif()
 # ---- Add dependencies via CPM ----
 # 依赖管理
 include(cmake/CPM.cmake)
-
-# 3rdpart 安装目录
-set(INSTALL_DIR_3RD ${CMAKE_BINARY_DIR}/3rdpart)
-list(APPEND CMAKE_PREFIX_PATH ${INSTALL_DIR_3RD})
-
-# 项目打包
-CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.13.0")
-
-# 日志
-CPMAddPackage(
-  NAME spdlog
-  VERSION 1.15.0
-  GITHUB_REPOSITORY gabime/spdlog
-  OPTIONS
-    "SPDLOG_BUILD_EXAMPLE OFF"
-    "SPDLOG_BUILD_TESTS OFF"
-    "SPDLOG_INSTALL ON"
-)
-
-# 配置文件解析
-CPMAddPackage(
-  NAME fkYAML
-  VERSION 0.4.1
-  GITHUB_REPOSITORY fktn-k/fkYAML
-  OPTIONS
-    "FK_YAML_INSTALL ON"
-)
-
-# 通信
-CPMAddPackage("gh:zeromq/cppzmq@4.10.0")
+CPMUsePackageLock(package-lock.cmake)
+CPMGetPackage(PackageProject.cmake)
+CPMGetPackage(spdlog)
+CPMGetPackage(fkYAML)
+CPMGetPackage(cppzmq)
 
 # ---- Create library ----
 add_library(${PROJECT_NAME} source/tskpub.cc)
@@ -60,10 +35,6 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 # ---- Create an installable target ----
-# this allows users to install and find the library via `find_package()`.
-
-# the location where the project's version header will be placed should match the project's regular
-# header paths
 string(TOLOWER ${PROJECT_NAME}/version.h VERSION_HEADER_LOCATION)
 
 packageProject(
@@ -75,5 +46,5 @@ packageProject(
   INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
   VERSION_HEADER "${VERSION_HEADER_LOCATION}"
   COMPATIBILITY SameMajorVersion
-  DEPENDENCIES "spdlog::spdlog 1.8.5;fkYAML::fkYAML 0.4.1;cppzmq 4.10.0"
+  DEPENDENCIES "spdlog 1.8.5;fkYAML 0.4.1;cppzmq 4.10.0"
 )
