--- a/messages/CMakeLists.txt
+++ b/messages/CMakeLists.txt
@@ -2,20 +2,17 @@
 file(GLOB_RECURSE CAPNP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.capnp")
 
 # generate the C++ files
-set(msgsrcs)
-set(msgheaders)
-foreach(CAPNP_FILE ${CAPNP_FILES})
-    capnp_generate_cpp(msgsrc msgheader ${CAPNP_FILE})
-    list(APPEND msgsrcs ${msgsrc})
-    list(APPEND msgheaders ${msgheader})
-endforeach()
+set(msg_include_dir ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}/msg)
+file(MAKE_DIRECTORY ${msg_include_dir})
+set(CAPNPC_OUTPUT_DIR ${msg_include_dir})
+capnp_generate_cpp(msgsrc msgheader ${CAPNP_FILES})
 
 # add the generated files to the library
-add_library(messages ${msgsrcs} ${msgheaders})
+add_library(messages ${msgsrc})
 target_link_libraries(messages PUBLIC CapnProto::capnp)
 target_include_directories(messages PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
-    $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
+    $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}/msg>
 )
 
 # install the `messages` library
