feat<imu>: 添加 IMU 测试，全部测试通过✅

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,8 +14,16 @@ include(../cmake/tools.cmake)
 # ---- Dependencies ----
 
 include(../cmake/CPM.cmake)
-
+CPMUsePackageLock(${PROJECT_SOURCE_DIR}/../package-lock.cmake)
+CPMGetPackage(spdlog)
+CPMGetPackage(fkYAML)
+CPMGetPackage(cppzmq)
 CPMAddPackage("gh:doctest/doctest@2.4.11")
+CPMAddPackage(
+  NAME imu
+  VERSION 1.0.0
+  URL "file://${CMAKE_CURRENT_LIST_DIR}/../drivers/imu.tar.gz"
+)
 
 if(TEST_INSTALLED_VERSION)
   find_package(TSKPub REQUIRED)
@@ -24,19 +32,17 @@ else()
 endif()
 
 # ---- Create binary ----
-
-file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cc)
-add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} doctest::doctest TSKPub::TSKPub)
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
-
-# ---- Add GreeterTests ----
-
+include(CTest)
 enable_testing()
 
-# Note: doctest and similar testing frameworks can automatically configure CMake tests. For other
-# testing frameworks add the tests target instead: add_test(NAME ${PROJECT_NAME} COMMAND
-# ${PROJECT_NAME})
+file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cc)
+file(GLOB_RECURSE lib_srcs CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../source/*.cc)
+add_executable(${PROJECT_NAME} ${sources} ${lib_srcs})
+target_link_libraries(${PROJECT_NAME} doctest::doctest TSKPub::messages imu spdlog fkYAML cppzmq)
+target_include_directories(${PROJECT_NAME} PRIVATE 
+  ${PROJECT_SOURCE_DIR}/../source
+  ${PROJECT_SOURCE_DIR}/../include)
+target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17)
 
 include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
 doctest_discover_tests(${PROJECT_NAME})
