--- a/configs/test.yml
+++ b/configs/test.yml
@@ -4,17 +4,16 @@ log:
   loglevel: 0
   pattern: "[%Y-%m-%d %H:%M:%S] [%L] [%P] [%T] %v"
 
-sensors: [status]
+sensors: [status, imu]
 
 status:
   topic: /tinysk/status
   type: Status
   rate: 1
 
-# imu:
-#   topic: /tinysk/imu
-#   type: Imu
-#   rate: 100
-#   port: /dev/ttyUSB0
-#   baudrate: 115200
-#   frame_id: head
+imu:
+  topic: /tinysk/imu
+  type: Imu
+  rate: 100
+  port: /dev/ttyUSB0
+  baud_rate: 115200
