--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(${PROJECT_NAME} tskpub.cc common.cc reader/imu.cc reader/reader.cc)
+add_library(${PROJECT_NAME} tskpub.cc common.cc reader/imu.cc reader/reader.cc reader/cam.cc)
 target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 -Wall -Wextra -Wpedantic)
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE spdlog fkYAML cppzmq PkgConfig::GStreamer imu
+    PRIVATE spdlog fkYAML cppzmq imu Camera
     PUBLIC messages)
 target_include_directories(${PROJECT_NAME}
     PUBLIC
