--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(${PROJECT_NAME} tskpub.cc common.cc
     reader/imu.cc reader/reader.cc reader/cam.cc reader/status.cc)
 target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 -Wall -Wextra -Wpedantic)
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE spdlog fkYAML cppzmq imu Camera
+    PRIVATE spdlog fkYAML cppzmq imu Camera xtsdk::xtsdk ${PCL_LIBRARIES}
     PUBLIC messages)
 target_include_directories(${PROJECT_NAME}
     PUBLIC
@@ -10,4 +10,5 @@ target_include_directories(${PROJECT_NAME}
     $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
     PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
+    ${PCL_INCLUDE_DIRS}
 )
