--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(${PROJECT_NAME} tskpub.cc common.cc 
-    reader/imu.cc reader/reader.cc reader/cam.cc reader/status.cc)
+    reader/imu.cc reader/reader.cc reader/cam.cc reader/status.cc reader/lidar.cc)
 target_compile_options(${PROJECT_NAME} PRIVATE -std=c++17 -Wall -Wextra -Wpedantic)
 target_link_libraries(${PROJECT_NAME}
     PRIVATE spdlog fkYAML cppzmq imu Camera xtsdk::xtsdk ${PCL_LIBRARIES}
