feat(reader): add LidarReader tests and update configuration for laser sensor

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -13,7 +13,9 @@ CPMGetPackage(spdlog)
 CPMGetPackage(fkYAML)
 CPMAddPackage(NAME imu URL ${driver_dir}/imu.tar.gz)
 CPMAddPackage(NAME Camera URL ${driver_dir}/camera.tar.gz)
+CPMAddPackage(URL ${driver_dir}/xtsdk.tar.gz)
 CPMAddPackage("gh:doctest/doctest@2.4.11")
+find_package(PCL REQUIRED COMPONENTS common)
 
 add_library(dep_helper INTERFACE IMPORTED)
 target_link_libraries(dep_helper INTERFACE doctest TSKPub::messages spdlog fkYAML)
@@ -26,8 +28,8 @@ target_include_directories(dep_helper INTERFACE
 file(GLOB reader_test_srcs CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/*.cc)
 file(GLOB_RECURSE reader_srcs CONFIGURE_DEPENDS ${src_dir}/*.cc)
 add_executable(${PROJECT_NAME} ${reader_test_srcs} ${reader_srcs})
-target_include_directories(${PROJECT_NAME} PRIVATE ${src_dir} ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(${PROJECT_NAME} PRIVATE dep_helper imu Camera)
+target_include_directories(${PROJECT_NAME} PRIVATE ${src_dir} ${CMAKE_CURRENT_BINARY_DIR} ${PCL_INCLUDE_DIRS})
+target_link_libraries(${PROJECT_NAME} PRIVATE dep_helper imu Camera xtsdk::xtsdk ${PCL_LIBRARIES})
 configure_file(cfg.yml.hh.in ${CMAKE_CURRENT_BINARY_DIR}/cfg.yml.hh)
 
 
