--- a/test/unit/cfg.yml
+++ b/test/unit/cfg.yml
@@ -4,7 +4,7 @@ log:
   loglevel: 0
   pattern: "[%Y-%m-%d %H:%M:%S] [%L] [%P] [%T] %v"
 
-sensors: [status, imu, video0]
+sensors: [status, imu, video0, laser]
 
 status:
   topic: /tinysk/status
@@ -28,3 +28,36 @@ video0:
     video/x-raw, width=640, height=480, framerate=30/1 !
     videoconvert ! jpegenc !
     jpegparse ! appsink name=s
+
+laser:
+  topic: /tinysk/laser
+  type: PointCloud
+  rate: 10
+  port: /dev/ttyACM0
+  device:
+    frequency_modulation: 1
+    HDR: 1
+    imgType: 4
+    cloud_coord: 0
+    int1: 100
+    int2: 1000
+    int3: 0
+    intgs: 2000
+    minLSB: 80
+    curcorner: 60
+    start_stream: true
+    # connect_address: 0.0.0.0
+    maxfps: 30
+    hmirror: 0
+    vmirror: 0
+    renderType: 2
+  filter:
+    medianSize: 3
+    kalmanEnable: true
+    kalmanFactor: 0.30
+    kalmanThreshold: 200
+    edgeEnable: true
+    edgeThreshold: 300
+    dustEnable: true
+    dustThreshold: 2000
+    dustFrames: 2
