feat(build): update CMake configuration to include lidar dependency and streamline package management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,15 +23,18 @@ CPMGetPackage(PackageProject.cmake)
 CPMGetPackage(spdlog)
 CPMGetPackage(fkYAML)
 CPMGetPackage(cppzmq)
+set(dep_list "spdlog 1.8.5" "fkYAML 0.4.1" "cppzmq 4.10.0")
 
 # 本地第三方依赖
 CPMAddPackage(NAME imu URL ${driver_dir}/imu.tar.gz)
 CPMAddPackage(NAME Camera URL ${driver_dir}/camera.tar.gz)
-CPMAddPackage(URL ${driver_dir}/xtsdk.tar.gz)
+CPMAddPackage(NAME lidar URL ${driver_dir}/xtsdk.tar.gz)
+list(APPEND dep_list "imu" "Camera" "lidar")
 
 # 本地系统依赖
 find_package(CapnProto CONFIG REQUIRED)
 find_package(PCL REQUIRED COMPONENTS common)
+list(APPEND dep_list "CapnProto" "PCL COMPONENTS common")
 
 # ---- Create library ----
 add_subdirectory(messages)
@@ -41,6 +44,7 @@ add_subdirectory(source)
 
 # ---- Create an installable target ----
 string(TOLOWER ${PROJECT_NAME}/version.h VERSION_HEADER_LOCATION)
+string(JOIN ";" dep_list "${dep_list}")
 
 packageProject(
   NAME ${PROJECT_NAME}
@@ -52,5 +56,15 @@ packageProject(
   INCLUDE_HEADER_PATTERN "*.h;*.hh"
   VERSION_HEADER "${VERSION_HEADER_LOCATION}"
   COMPATIBILITY SameMajorVersion
-  DEPENDENCIES "spdlog 1.8.5;fkYAML 0.4.1;cppzmq 4.10.0"
+  DEPENDENCIES "${dep_list}"
+)
+
+packageProject(
+  NAME messages
+  VERSION ${PROJECT_VERSION}
+  NAMESPACE ${PROJECT_NAME}
+  BINARY_DIR ${PROJECT_BINARY_DIR}
+  INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}
+  INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
+  DEPENDENCIES "CapnProto 1.1.0"
 )
