fix<cmake>: update lidar package URL to correct path in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(dep_list "spdlog 1.8.5" "fkYAML 0.4.1" "cppzmq 4.10.0")
 # 本地第三方依赖
 CPMAddPackage(NAME imu URL ${driver_dir}/imu.tar.gz)
 CPMAddPackage(NAME Camera URL ${driver_dir}/camera.tar.gz)
-CPMAddPackage(NAME lidar URL ${driver_dir}/xtsdk.tar.gz)
+CPMAddPackage(NAME lidar URL ${driver_dir}/lidar.tar.gz)
 list(APPEND dep_list "imu" "Camera" "lidar")
 
 # 本地系统依赖
