--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.14...3.22)
+cmake_minimum_required(VERSION 3.15)
 
-project(GreeterStandalone LANGUAGES CXX)
+project(TSKPubStandalong LANGUAGES CXX)
 
 # --- Import tools ----
 
@@ -9,21 +9,19 @@ include(../cmake/tools.cmake)
 # ---- Dependencies ----
 
 include(../cmake/CPM.cmake)
-
+CPMUsePackageLock(../package-lock.cmake)
+CPMGetPackage(cppzmq)
+CPMGetPackage(fkYAML)
+CPMGetPackage(spdlog)
 CPMAddPackage(
   GITHUB_REPOSITORY jarro2783/cxxopts
   VERSION 3.0.0
   OPTIONS "CXXOPTS_BUILD_EXAMPLES NO" "CXXOPTS_BUILD_TESTS NO" "CXXOPTS_ENABLE_INSTALL YES"
 )
 
-CPMAddPackage(NAME Greeter SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
+CPMAddPackage(NAME tskpub SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
 # ---- Create standalone executable ----
-
-file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
-
-add_executable(${PROJECT_NAME} ${sources})
-
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17 OUTPUT_NAME "Greeter")
-
-target_link_libraries(${PROJECT_NAME} Greeter::Greeter cxxopts)
+add_executable(${PROJECT_NAME} main.cc)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
+target_link_libraries(${PROJECT_NAME} TSKPub::TSKPub cppzmq fkYAML cxxopts spdlog)
