refactor(tests): remove obsolete cfg.yml and update CMakeLists to use CONFIG_FILE macro

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -30,9 +30,9 @@ file(GLOB_RECURSE reader_srcs CONFIGURE_DEPENDS ${src_dir}/*.cc)
 add_executable(${PROJECT_NAME} ${reader_test_srcs} ${reader_srcs})
 target_include_directories(${PROJECT_NAME} PRIVATE ${src_dir} ${CMAKE_CURRENT_BINARY_DIR} ${PCL_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PRIVATE dep_helper imu Camera xtsdk::xtsdk ${PCL_LIBRARIES})
-configure_file(cfg.yml.hh.in ${CMAKE_CURRENT_BINARY_DIR}/cfg.yml.hh)
+target_compile_definitions(${PROJECT_NAME} PRIVATE CONFIG_FILE="${CONFIG_DIR}/cfg.yml")
 
 
 include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
 enable_testing()
-doctest_discover_tests(${PROJECT_NAME})
+doctest_discover_tests(${PROJECT_NAME} TEST_PREFIX "unit.")
