--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -12,8 +12,9 @@ add_executable(${PROJECT_NAME} main.cc)
 target_link_libraries(${PROJECT_NAME} PRIVATE TSKPub::TSKPub doctest fkYAML)
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_BINARY_DIR})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
-configure_file(cfg.yml.hh.in ${CMAKE_CURRENT_BINARY_DIR}/cfg.yml.hh)
+configure_file(${CONFIG_DIR}/test/integ.yml.in ${CMAKE_CURRENT_BINARY_DIR}/integ.yml)
+target_compile_definitions(${PROJECT_NAME} PRIVATE CONFIG_FILE="${CMAKE_CURRENT_BINARY_DIR}/integ.yml")
 
 include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
 enable_testing()
-doctest_discover_tests(${PROJECT_NAME})
+doctest_discover_tests(${PROJECT_NAME} TEST_PREFIX integ.)
