--- a/all/CMakeLists.txt
+++ b/all/CMakeLists.txt
@@ -9,6 +9,8 @@ include(../cmake/tools.cmake)
 
 set(CONFIG_DIR ${CMAKE_CURRENT_LIST_DIR}/../configs)
 
+enable_testing()
+
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../standalone ${CMAKE_BINARY_DIR}/standalone)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../test ${CMAKE_BINARY_DIR}/test)
 # add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/../documentation ${CMAKE_BINARY_DIR}/documentation)
