feat(config): update template configuration to specify IP address and port for publisher

--- a/configs/template.yml
+++ b/configs/template.yml
@@ -1,5 +1,6 @@
 app:
-  address: tcp://*:29877
+  ip: 172.21.0.2 # 发布者的 IP 地址，以便订阅者使用
+  port: 8921 # 发布数据的端口
   # 轮询消息队列的频率，单位 Hz
   checking_rate: 100
 
